--- a/.github/workflows/main_esportscompare.yml
+++ b/.github/workflows/main_esportscompare.yml
@@ -22,40 +22,25 @@ jobs:
         with:
           dotnet-version: '8.0.x'
       
-      - name: Change  for environment
-        uses: jacobtomlinson/gha-find-replace@v3
-        with:
-          find: "{{ ESPORTSCOMPARE_ISSUER }}"
-          replace: '${{ env.ESPORTSCOMPARE_ISSUER }}'
-          include: "**appsettings.json"
-      
-      - name: Change  for environment
-        uses: jacobtomlinson/gha-find-replace@v3
-        with:
-          find: "{{ ESPORTSCOMPARE_AUDIENCE }}"
-          replace: '${{ env.ESPORTSCOMPARE_AUDIENCE }}'
-          include: "**appsettings.json"
+      - name: Replace Key
+        run: |
+          sed -i 's/{{ KEY }}/'${{ secrets.ESPORTSCOMPAREKEY }}'/g' ./publish/appsettings.json
 
-      - name: Change 2 for environment
-        uses: jacobtomlinson/gha-find-replace@v3
-        with:
-          find: "{{ KEY }}"
-          replace: '${{ env.KEY }}'
-          include: "**appsettings.json"
+      - name: Replace DB Connection String
+        run: |
+          sed -i 's/{{ DefaultConnection }}/'${{ env.DEFAULTCONNECTION }}'/g' ./publish/appsettings.json
 
-      - name: Change  for environment
-        uses: jacobtomlinson/gha-find-replace@v3
-        with:
-          find: "{{ DefaultConnection }}"
-          replace: '${{ env.DefaultConnection }}'
-          include: "**appsettings.json"
+      - name: Replace URL
+        run: |
+          sed -i 's/{{ ESPORTSCOMPARE_AUDIENCE }}/'${{ env.ESPORTSCOMPARE_AUDIENCE }}'/g' ./publish/appsettings.json
 
-      - name: Change  for environment
-        uses: jacobtomlinson/gha-find-replace@v3
-        with:
-          find: "{{ ESPORTSCOMPARE_FRONTEND_URL }}"
-          replace: '${{ env.ESPORTSCOMPARE_FRONTEND_URL }}'
-          include: "**appsettings.json"
+      - name: Replace URL
+        run: |
+          sed -i 's/{{ ESPORTSCOMPARE_FRONTEND_URL }}/'${{ env.ESPORTSCOMPARE_FRONTEND_URL }}'/g' ./publish/appsettings.json
+
+      - name: Replace Key
+        run: |
+          sed -i 's/{{ ESPORTSCOMPARE_ISSUER }}/'${{ env.ESPORTSCOMPARE_ISSUER }}'/g' ./publish/appsettings.json
 
       - name: Restore
         run: dotnet restore src/EsportsProfileApi.Web/EsportsProfileWebApi.Web.sln
