--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
@@ -11,8 +11,7 @@
     "Key": "SuperDuperSecretValueSuperDuperSecretValue"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "data source=Jordan;initial catalog=STDEV;trusted_connection=true;encrypt=false",
-    "MongoConnection": "mongodb://127.0.0.1:27017"
+    "DefaultConnection": "mongodb://127.0.0.1:27017"
   },
   "front-end-url": "http://localhost:3000"
 }
