--- a/src/EsportsProfileWebApi.Web/appsettings.Development.json
+++ b/src/EsportsProfileWebApi.Web/appsettings.Development.json
@@ -11,7 +11,8 @@
     "Key": "SuperDuperSecretValueSuperDuperSecretValue"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "mongodb://127.0.0.1:27017"
+    "DefaultConnection": "mongodb://127.0.0.1:27017",
+    "SqlConnection":"Host=localhost;Port=5432;Username=postgres;Password=password;Database=EC-DB"
   },
   "front-end-url": "http://localhost:3000"
 }
