--- a/src/EsportsProfileWebApi.Web/appsettings.json
+++ b/src/EsportsProfileWebApi.Web/appsettings.json
@@ -11,7 +11,8 @@
     "Key": "{{ KEY }}"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "{{ DefaultConnection }}"
+    "DefaultConnection": "{{ DefaultConnection }}",
+    "SqlConnection":"{{ SqlConnectionString }}"
   },
   "front-end-url": "{{ ESPORTSCOMPARE_FRONTEND_URL }}"
 }
