added pagination endpoint for users, no filtering yet.

--- a/src/EsportsProfileWebApi.Web/appsettings.json
+++ b/src/EsportsProfileWebApi.Web/appsettings.json
@@ -11,8 +11,7 @@
     "Key": "{{ KEY }}"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "{{ DefaultConnection }}",
-    "SqlConnection":"{{ SqlConnectionString }}"
+    "DefaultConnection": "{{ DefaultConnection }}"
   },
   "front-end-url": "{{ ESPORTSCOMPARE_FRONTEND_URL }}"
 }
