added changes for paginated users

--- a/src/EsportsProfileWebApi.Web/appsettings.Development.json
+++ b/src/EsportsProfileWebApi.Web/appsettings.Development.json
@@ -11,7 +11,7 @@
     "Key": "SuperDuperSecretValueSuperDuperSecretValue"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=password;Database=EC-DB"                      
+    "DefaultConnection": "data source=127.0.0.1;initial catalog=TestingDB;User ID=SA;Password=P4ssw0rd;TrustServerCertificate=True;"
   },
   "front-end-url": "http://localhost:3000"
 }
