updating main to current dev path

--- a/src/EsportsProfileWebApi.Web/appsettings.Development.json
+++ b/src/EsportsProfileWebApi.Web/appsettings.Development.json
@@ -11,7 +11,7 @@
     "Key": "SuperDuperSecretValueSuperDuperSecretValue"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "data source=127.0.0.1;initial catalog=TestingDB;User ID=SA;Password=P4ssw0rd;TrustServerCertificate=True;"
+    "DefaultConnection": "data source=192.168.40.93,1433;initial catalog=Configs;User ID=SA;Password=Password%1#29;Encrypt=True;TrustServerCertificate=True;"
   },
   "front-end-url": "http://localhost:3000"
 }
